--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 </head>
 <body>
 <h1>Welcome eFlora World...!!!</h1>
+
+<a href="plant1.html">Plant 1</a> <br>
+<a href="plant2.html">Plant 2</a> <br>
+<a href="plant3.html">Plant 3</a> <br>
+
 </body>
 </html>
