--- a/plant3.html
+++ b/plant3.html
@@ -1,13 +1,30 @@
 <html>
 <head>
 <title>eFlora - Plant 3</title>
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=myMap"></script>
+
 </head>
 <body>
-<h1>Plant 3</h1>
+<h1>Plant 3</h1> 
 <br> <br> <br>
 
 
 <img src="BRASSICAJUNCEA1.jpg" alt="BRASSICA JUNCEA1" width="500" height="600">
+
+<br> <br> <br>
+
+<iframe
+  width="600"
+  height="450"
+  style="border:0"
+  loading="lazy"
+  allowfullscreen
+  referrerpolicy="no-referrer-when-downgrade"
+  src="https://www.google.com/maps/embed/v1/place?key=API_KEY
+    &q=Space+Needle,Seattle+WA">
+</iframe>
+
+<br> <br> <br>
 
 <a href="index.html">Home</a> <br>
 
