--- a/plant3.html
+++ b/plant3.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 <title>eFlora - Plant 3</title>
-<script src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=myMap"></script>
+
+<!-- <script src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=myMap"></script> -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
  
 </head>
@@ -15,9 +17,9 @@
 
 <br> <br> <br>
 
-<iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" 
+<!-- <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" 
   src="https://www.google.com/maps/embed/v1/place?key=API_KEY&q=Space+Needle,Seattle+WA">
-</iframe>
+</iframe>  -->
 
 <br> <br> <br>
 
