--- a/plant3.html
+++ b/plant3.html
@@ -1,11 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <title>eFlora - Plant 3</title>
 
 <!-- <script src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=myMap"></script> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
+    <style>
+  
+        .qr-row {
+            display: flex;
+        }
+        .qr-container {
+            padding: 2rem 0;
+            border-top: 1px solid #e9e9e9;
+            background-color: #f5f5f5;
+            margin-top: 3rem;
+        }
+
+        .qr-content {
+            margin-left: 2rem;
+            display: flex;
+            align-items: flex-start;
+            flex-direction: column;
+            justify-content: center;
+        }
+        .qr-title {
+            font-size: 2rem;
+            color: #333;
+            margin-bottom: 10px;
+        }
+        .qr-description {
+            font-size: 1.1rem;
+            margin-bottom: 10px;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0px auto;
+        }
+        .qr-card {
+            flex: 1;
+            background: #fff;
+            padding: 2rem;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+        }
+       
+ </style>
  
 </head>
 <body>
@@ -25,7 +67,7 @@
 
 <a href="index.html">Home</a> <br>
 
-https://pesumpayirgal.github.io/casuarinaequisetifolia.html
+<!-- https://pesumpayirgal.github.io/casuarinaequisetifolia.html  -->
 
 <main>
 
