--- a/plant3.html
+++ b/plant3.html
@@ -8,6 +8,10 @@
 
     <style>
   
+      .header {
+            background-color: #4CAF50;
+            padding: 1rem;
+        }
         .qr-row {
             display: flex;
         }
@@ -34,6 +38,7 @@
             font-size: 1.1rem;
             margin-bottom: 10px;
         }
+		
         .container {
             max-width: 1200px;
             margin: 0px auto;
@@ -51,6 +56,9 @@
  
 </head>
 <body>
+
+<div class="header"><div class="container"><h1 id="pageTitle"></h1></div></div>
+ 
 <h1>Plant 3</h1> 
 <br> <br> <br>
 
