--- a/plant3.html
+++ b/plant3.html
@@ -71,6 +71,8 @@
   src="https://www.google.com/maps/embed/v1/place?key=API_KEY&q=Space+Needle,Seattle+WA">
 </iframe>  -->
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15645.568260853339!2d77.884643759668!3d11.379044156943724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba96191aa62873b%3A0xcbcc6272306596d2!2sTiruchengode%2C%20Tamil%20Nadu%20637211%2C%20India!5e0!3m2!1sen!2suk!4v1716145167302!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>	
+
 <br> <br> <br>
 
 <a href="index.html">Home</a> <br>
