--- a/index.html
+++ b/index.html
@@ -11,7 +11,42 @@
 
 <br> <br>
 
-<a href="28_BRASSICA_JUNCEA.pdf" target="_blanl">BRASSICA JUNCEA</a> <br><br>
+<table>
+<tr>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">A</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">B</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">C</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">D</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">E</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">F</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">G</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">H</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">I</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">J</a></td>
+
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">K</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">L</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">M</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">N</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">O</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">P</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">Q</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">R</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">S</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">T</a></td>
+
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">U</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">V</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">W</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">X</a></td>
+<td><a href="/prices/a#pricesTableContainer" rel="nofollow">Y</a></td>
+<td><a href="/prices/b#pricesTableContainer" rel="nofollow">Z</a></td>
+</tr>                                                                                                                                     
+</table>
+
+<br> <br>
+  
+<a href="28_BRASSICA_JUNCEA.pdf" target="_blanl">BRASSICA JUNCEA (PDF)</a> <br><br>
 
 
 
