--- a/plant3.html
+++ b/plant3.html
@@ -61,7 +61,8 @@
  
 <h1>Plant 3</h1> 
 <br> <br> <br>
-
+	<a href="index.html">Home</a> <br>
+<br> <br> <br>
 
 <img src="BRASSICAJUNCEA1.jpg" alt="BRASSICA JUNCEA1" width="500" height="600">
 
